# babyeco

./: .gitignore  BabyEco_需求交付包_V3.1.md  CHANGELOG.md  README.md
.github/workflows/: tests.yml
.moai/config/: config.yaml
.moai/config/sections/: git-strategy.yaml  language.yaml  quality.yaml  statusline.yaml  system.yaml  user.yaml  workflow.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: sync-report-20260321_232534.md
.moai/specs/: README.md
.moai/specs/SPEC-AUTH-001/: plan.md  progress.md
.moai/specs/SPEC-BE-AI-001/: plan.md
.moai/specs/SPEC-BE-AUTH-001/: plan.md
.moai/specs/SPEC-BE-ENTERTAIN-001/: plan.md
.moai/specs/SPEC-BE-EXCHANGE-001/: plan.md
.moai/specs/SPEC-BE-POINT-001/: plan.md
.moai/specs/SPEC-BE-REPORT-001/: plan.md
.moai/specs/SPEC-BE-TASK-001/: plan.md
.moai/specs/SPEC-DESIGN-001/: plan.md  progress.md
.moai/specs/SPEC-DESIGN-002/: plan.md  progress.md
apps/parent-app/: IMPLEMENTATION_COMPLETE.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  实现总结.md
backend/: .gitignore  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: __init__.py  rate_limit.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  child_auth.py  children.py  entertainment.py  exchange.py  points.py  reports.py  tasks.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  monitoring.py  security.py
backend/app/middleware/: performance.py
backend/app/migrations/versions/: add_performance_indexes.py
backend/app/models/: __init__.py  ai.py  base.py  child_profile.py  entertainment.py  exchange.py  family.py  point.py  report.py  task.py  token_blacklist.py  user.py
backend/app/repositories/: __init__.py  child_profile_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  auth.py  child_profile.py  entertainment.py  exchange.py  point.py  report.py  task.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  child_profile_service.py  entertainment_service.py  exchange_service.py  password_reset_service.py  point_service.py  report_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/integration/: README.md  __init__.py  conftest.py  fixtures.py  helpers.py  test_api_contract.py
backend/tests/test_api/: test_auth.py  test_child_auth.py  test_children.py  test_family_auth.py  test_points.py  test_tasks.py
backend/tests/test_core/: test_config.py  test_database.py  test_security.py
backend/tests/test_integration/: test_user_flows.py
backend/tests/test_models/: test_base.py  test_child_profile.py  test_user.py
backend/tests/test_repositories/: test_child_profile_repository.py  test_user_repository.py
backend/tests/test_services/: test_auth_service.py  test_child_profile_service.py  test_point_service_tdd.py  test_report_service_tdd.py  test_task_service_tdd.py
docs/: design-system-child-app.md
docs/design/: 孩子端交互设计规范.md  家长端交互设计规范.md
docs/design-system/: README.md  tailwind.config.js  tokens.css  tokens.json
(+36 files in other folders)
